2018-05-31  Mark Wielaard  <mark@klomp.org>

	* low_high_pc.c (handle_die): Handle NULL name. Print offset and
	name of die.
	(main): Check if the cu DIE is a skeleton, then get and handle
	the split subdie.
	* run-low-high-pc.sh: Run on testfile-splitdwarf-4 and
	testfile-splitdwarf-5. Run on all selftest files.

2018-05-31  Mark Wielaard  <mark@klomp.org>

	* get-units-invalid.c (main): Check dwarf_cuoffset and
	dwarf_dieoffset.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* dwarf-die-addr-die.c (check_dbg): Also check subdies, split or
	type, gotten through dwarf_get_units.
	* run-dwarf-die-addr-die.sh: Add tests for dwarf-4, dwarf-5,
	split-dwarf-4, split-dwarf-5 and dwo files.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* run-readelf-loc.sh: Add GNU DebugFission split-dwarf variant.
	* run-varlocs.sh: Likewise.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* run-readelf-twofiles.sh: Add --debug-dump=loc testcase.

2018-05-28  Mark Wielaard  <mark@klomp.org>

	* run-readelf-info-plus.sh: New test.
	* Makefile.am (TESTS): Add run-readelf-info-plus.sh.
	(EXTRA_DIST): Likewise.

2018-04-29  Mark Wielaard  <mark@klomp.org>

	* run-readelf-addr.sh: New test.
	* Makefile.am (TESTS): Add run-readelf-addr.sh.
	(EXTRA_DIST): Likewise.

2018-04-27  Mark Wielaard  <mark@klomp.org>

	* run-readelf-ranges.sh: Adjust expected output for address base.
	* run-readelf-addr.sh: New test.
	* Makefile.am (TESTS): Add run-readelf-addr.sh.
	(EXTRA_DIST): Likewise.

2018-04-07  Mark Wielaard  <mark@klomp.org>

	* run-varlocs.sh: Run on testfileranges5.debug and
	testsplitfileranges5.debug.
	* varlocs.c (is_debug): New bool.
	(print_expr): Don't fail on missing CFI for is_debug.
	(main): Parse --debug, set is_debug.

2018-04-12  Mark Wielaard  <mark@klomp.org>

	* run-readelf-loc.sh: Add new testcases.

2018-04-06  Mark Wielaard  <mark@klomp.org>

	* testfileranges5.debug.bz2: New testfile.
	* testfilesplitranges5.debug.bz2: Likewise.
	* testfile-ranges-hello5.dwo.bz2: Likewise.